Cleaning the project and moving classes to other modules for the tests.
git-svn-id: http://ikube.googlecode.com/svn/trunk@788 89a0fb20-889e-aefa-90f6-7c296b20d5cf

--- a/pom.xml
+++ b/pom.xml
@@ -111,6 +111,24 @@
 					</compilerArguments>
 				</configuration>
 			</plugin>
+			<plugin>
+				<artifactId>maven-failsafe-plugin</artifactId>
+				<version>2.6</version>
+				<configuration>
+					<forkMode>once</forkMode>
+					<includes>
+						<include>**/*Integration*.java</include>
+					</includes>
+				</configuration>
+				<executions>
+					<execution>
+						<goals>
+							<goal>integration-test</goal>
+							<goal>verify</goal> 
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
 			<!-- This plugin runs FindBugs on the project, generating the reports. -->
 			<plugin>
 				<groupId>org.codehaus.mojo</groupId>
