--- a/code/war/src/main/webapp/WEB-INF/web.xml
+++ b/code/war/src/main/webapp/WEB-INF/web.xml
@@ -20,7 +20,10 @@
 
 	<context-param>
 		<param-name>contextConfigLocation</param-name>
-		<param-value>/WEB-INF/spring/web-application-context.xml</param-value>
+		<param-value>
+			/WEB-INF/spring/spring-web.xml
+			/WEB-INF/spring/spring-security.xml
+		</param-value>
 	</context-param>
 
 	<listener>
