Small fixes and fine tuning the handlers.
git-svn-id: http://ikube.googlecode.com/svn/trunk@801 89a0fb20-889e-aefa-90f6-7c296b20d5cf

--- a/code/core/src/main/resources/conf/common/spring.properties
+++ b/code/core/src/main/resources/conf/common/spring.properties
@@ -21,6 +21,7 @@ internet.batch.size=1000
 file.batch.size=1000
 file.max.read.length=10000000
 throttle=0
+max.actions=3
 
 # These are client specific for Lucene
 analyzed=true
