[maven-release-plugin] prepare for next development iteration
git-svn-id: http://ikube.googlecode.com/svn/trunk@808 89a0fb20-889e-aefa-90f6-7c296b20d5cf

--- a/code/tool/pom.xml
+++ b/code/tool/pom.xml
@@ -6,12 +6,12 @@
 	<groupId>ikube</groupId>
 	<artifactId>ikube-tool</artifactId>
 	<packaging>jar</packaging>
-	<version>3.0.0</version>
+	<version>3.0.1-SNAPSHOT</version>
 
 	<parent>
 		<groupId>ikube</groupId>
 		<artifactId>ikube</artifactId>
-		<version>3.0.0</version>
+		<version>3.0.1-SNAPSHOT</version>
 		<relativePath>../../pom.xml</relativePath>
 	</parent>
 
