Changed the Artifactory to the localhost because DynDns is so slow it won't upload.
git-svn-id: http://ikube.googlecode.com/svn/trunk@814 89a0fb20-889e-aefa-90f6-7c296b20d5cf

--- a/pom.xml
+++ b/pom.xml
@@ -22,7 +22,7 @@
 		<repository>
 			<id>ikube</id>
 			<name>ikube-releases</name>
-			<url>http://ikube.dyndns.org:9000/artifactory/libs-release-local</url>
+			<url>http://localhost:9000/artifactory/libs-release-local</url>
 		</repository>
 	</distributionManagement>
 
