--- a/code/war/pom.xml
+++ b/code/war/pom.xml
@@ -1,12 +1,16 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="    http://maven.apache.org/POM/4.0.0    http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+
+	xsi:schemaLocation=" 
+		http://maven.apache.org/POM/4.0.0 
+		http://maven.apache.org/maven-v4_0_0.xsd">
 
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>ikube</groupId>
 	<artifactId>ikube-war</artifactId>
 	<packaging>war</packaging>
-	<version>3.0.0</version>
+	<version>3.0.0-SNAPSHOT</version>
 
 	<properties>
 		<jetty.version>6.1.11</jetty.version>
@@ -19,7 +23,7 @@
 	<parent>
 		<groupId>ikube</groupId>
 		<artifactId>ikube</artifactId>
-		<version>3.0.0</version>
+		<version>3.0.0-SNAPSHOT</version>
 		<relativePath>../../pom.xml</relativePath>
 	</parent>
 
@@ -94,7 +98,7 @@
 								<!-- Try calling the Tomcats and shut them down. -->
 								<echo message="Building the configuration : " />
 								<ant antfile="build.xml" target="package.configuration" inheritrefs="true">
-									<property name="profile" value="${profile}" />
+									<property name="profile"  value="${profile}" />
 								</ant>
 							</target>
 						</configuration>
