--- a/code/core/src/main/resources/conf/common/spring.properties
+++ b/code/core/src/main/resources/conf/common/spring.properties
@@ -54,7 +54,7 @@ delay=120000
 # The period between notifications for timed tasks
 period=60000
 # The maximum age of the GeoSpatial index
-max.age.geospatial=180
+max.age.geospatial=360
 
 
 # These parameters are for the Ikube documentation index
@@ -158,8 +158,11 @@ activemq.port=61616
 activemq.destination=composite.destination
 
 searcher.web.service.port=8081
+searcher.web.service.port.xml=8082
 searcher.web.service.path=/ikube/service/SearcherWebService?wsdl
-monitor.web.service.port=8082
+searcher.web.service.path.xml=/ikube/service/SearcherWebServiceXml?wsdl
+
+monitor.web.service.port=8083
 monitor.web.service.path=/ikube/service/MonitorWebService?wsdl
 
 searcher.web.service.url=http://ikube:${searcher.web.service.port}${searcher.web.service.path}
