--- a/code/war/pom.xml
+++ b/code/war/pom.xml
@@ -302,6 +302,11 @@
 			<version>1.0.3</version>
 		</dependency>
 		<dependency>
+            <groupId>com.sun.jersey.contribs</groupId>
+            <artifactId>jersey-multipart</artifactId>
+            <version>1.0.3</version>
+        </dependency>
+		<dependency>
 			<groupId>com.sun.jersey.contribs</groupId>
 			<artifactId>jersey-spring</artifactId>
 			<version>1.0.1</version>
