Cleaning out the web services junk. Also moved the persistence to another location so it can work in J2ee servers.
git-svn-id: http://ikube.googlecode.com/svn/trunk@828 89a0fb20-889e-aefa-90f6-7c296b20d5cf

--- a/code/core/pom.xml
+++ b/code/core/pom.xml
@@ -109,6 +109,7 @@
 					<includes>ikube/model/*.class,ikube/model/**/*.class</includes>
 					<addDefaultConstructor>false</addDefaultConstructor>
 					<enforcePropertyRestrictions>true</enforcePropertyRestrictions>
+					<persistenceXmlFile>${project.basedir}/src/main/resources/META-INF/persistence/persistence.xml</persistenceXmlFile> 
 				</configuration>
 				<executions>
 					<execution>
