--- a/code/war/build.properties
+++ b/code/war/build.properties
@@ -21,7 +21,7 @@ tomcat.1.bin=${tomcat.1}/bin
 tomcat.2.bin=${tomcat.2}/bin
 tomcat.3.bin=${tomcat.3}/bin
 
-jboss.1=${cluster.directory}/jboss-as-web-7.0.2.Final
+jboss.1=${cluster.directory}/jboss-7.0.2
 jboss.1.bin=${jboss.1}/bin
 jboss.1.deploy=${jboss.1}/standalone/deployments
 
