Getting ready for the volume test of a billion!
git-svn-id: http://ikube.googlecode.com/svn/trunk@832 89a0fb20-889e-aefa-90f6-7c296b20d5cf

--- a/code/core/src/main/resources/conf/common/spring.properties
+++ b/code/core/src/main/resources/conf/common/spring.properties
@@ -6,20 +6,20 @@
 max.age=180
 
 # These parameters are destined for the index context
-buffer.size=256
+buffer.size=128
 compound.file=false
-merge.factor=1000
-buffered.docs=1000
+merge.factor=100
+buffered.docs=100
 max.field.length=1000
-max.read.length=10000000
+max.read.length=1000000
 # \\\\Ikube\\D\\cluster\\apache-tomcat-6.0.29-1\\bin\\indexes
-index.directory.path=C:/cluster/indexes
+index.directory.path=/usr/local/indexes
 # \\\\Ikube\\D\\cluster\\indexes\\backup
 index.directory.path.backup=${index.directory.path}/backup
 jdbc.batch.size=10000
 internet.batch.size=1000
 file.batch.size=1000
-file.max.read.length=10000000
+file.max.read.length=1000000
 throttle=0
 max.actions=3
 
@@ -32,7 +32,7 @@ vectored=true
 # The number of threads for each indexing component/connector
 table.handler.threads=3
 internet.handler.threads=3
-filesystem.handler.threads=3
+filesystem.handler.threads=1
 email.handler.threads=1
 
 # These parameters are client specific
@@ -41,7 +41,7 @@ url.million=http://localhost:8080/million/adapt.html
 faq.predicate=where faq.faqid < 10000000 and published = 1
 patient.predicate=where patient.id > 0
 files.path=./code/core/src/test/resources/data/files
-files.path.million=C:/apache-tomcat-6.0.26
+files.path.million=/usr/local/cluster/apache-tomcat-6.0.26-1
 files.excluded.pattern=.*(.svn).*|.*(.db).*|.*(.gif).*|.*(.svg).*|.*(.jpg).*|.*(.exe).*|.*(.dll).*|.*(password).*|.*(enwiki-latest-pages-articles).*
 internet.excluded.pattern=.*(.zip).*|.*(.png).*|.*(/search).*|.*(/images).*|.*(wiki).*|.*(r=).*|.*(.war).*|.*(terminate).*|.*(startup).*
 
@@ -78,21 +78,21 @@ h2.jdbc.driver=org.h2.Driver
 #jdbc:h2:tcp://localhost/~/ikube
 
 # The DB2 database credentials
-db2.jdbc.userid=db2admin
-db2.jdbc.password=db2admin
-db2.jdbc.url=jdbc:db2://ikube:50000/ikube_3
+db2.jdbc.userid=ubuntu
+db2.jdbc.password=Caherl1ne
+db2.jdbc.url=jdbc:db2://ikube.dyndns.org:50000/ikube
 db2.jdbc.driver=com.ibm.db2.jcc.DB2Driver
 
 # The Oracle database credentials
-oracle.jdbc.userid=XE
-oracle.jdbc.password=admin
-oracle.jdbc.url=jdbc:oracle:thin:@//ikube:1521/XE
+oracle.jdbc.userid=ikube
+oracle.jdbc.password=Caherl1ne
+oracle.jdbc.url=jdbc:oracle:thin:@//ikube.dyndns.org:1521/ikube
 oracle.jdbc.driver=oracle.jdbc.driver.OracleDriver
 
 # The Postgres database credentials
 postgresql.jdbc.userid=ikube
-postgresql.jdbc.password=ikube
-postgresql.jdbc.url=jdbc:postgresql://localhost:5432/ikube
+postgresql.jdbc.password=Caherl1ne
+postgresql.jdbc.url=jdbc:postgresql://ikube.dyndns.org:5432/ikube
 postgresql.jdbc.driver=org.postgresql.Driver
 
 #General JDBC settings
@@ -109,27 +109,27 @@ jdbc.unreturnedConnectionTimeout=12000000
 
 # H2 database, this is for distribution and production. This 
 # database is what ikube will use in the field
-ikube.dataSource=nonXaDataSourceH2
-ikube.persistenceUnit=IkubePersistenceUnitH2
-ikube.dataSourceType=H2
-ikube.jdbc.userid=${h2.jdbc.userid}
-ikube.jdbc.password=
-ikube.jdbc.url=${h2.jdbc.url}
-ikube.jdbc.driver=${h2.jdbc.driver}
-ikube.jdbc.dictionary=h2(batchLimit=1000)
-ikube.dataBaseClass=ikube.database.jpa.DataBaseJpa
+#ikube.dataSource=nonXaDataSourceH2
+#ikube.persistenceUnit=IkubePersistenceUnitH2
+#ikube.dataSourceType=H2
+#ikube.jdbc.userid=${h2.jdbc.userid}
+#ikube.jdbc.password=
+#ikube.jdbc.url=${h2.jdbc.url}
+#ikube.jdbc.driver=${h2.jdbc.driver}
+#ikube.jdbc.dictionary=h2(batchLimit=1000)
+#ikube.dataBaseClass=ikube.database.jpa.DataBaseJpa
 
 # Db2 database, this database is for testing essentially as
 # there is always an instance running on the server
-#ikube.dataSource=nonXaDataSourceDb2
-#ikube.persistenceUnit=IkubePersistenceUnitDb2
-#ikube.dataSourceType=DB2
-#ikube.jdbc.userid=${db2.jdbc.userid}
-#ikube.jdbc.password=${db2.jdbc.password}
-#ikube.jdbc.url=${db2.jdbc.url}
-#ikube.jdbc.driver=${db2.jdbc.driver}
-#ikube.jdbc.dictionary=db2(batchLimit=1000)
-#ikube.dataBaseClass=ikube.database.jpa.DataBaseJpaDb2
+ikube.dataSource=nonXaDataSourceDb2
+ikube.persistenceUnit=IkubePersistenceUnitDb2
+ikube.dataSourceType=DB2
+ikube.jdbc.userid=${db2.jdbc.userid}
+ikube.jdbc.password=${db2.jdbc.password}
+ikube.jdbc.url=${db2.jdbc.url}
+ikube.jdbc.driver=${db2.jdbc.driver}
+ikube.jdbc.dictionary=db2(batchLimit=1000)
+ikube.dataBaseClass=ikube.database.jpa.DataBaseJpaDb2
 
 # Oracle database, this database is for testing essentially as
 # there is always an instance running on the server
