--- a/code/war/build.properties
+++ b/code/war/build.properties
@@ -5,7 +5,11 @@ sleep=30
 
 target.directory=target
 
-cluster.directory=D:/cluster
+tomcat=/usr/local/apache-tomcat-7.0.25
+tomcat.bin=${tomcat}/bin
+tomcat.webapps=${tomcat}/webapps
+
+cluster.directory=/usr/local/cluster
 tomcats.directory=${cluster.directory}/tomcats
 indexes.directory=${cluster.directory}/indexes
 
@@ -37,7 +41,7 @@ weblogic.1=${cluster.directory}/wlserver/common
 weblogic.1.bin=${weblogic.1}/bin
 weblogic.1.deploy=${weblogic.1}/deployable-libraries
 
-jenkins.home=D:/apache-tomcat-6.0.26
+jenkins.home=/usr/local/apache-tomcat-7.0.25
 jenkins.bin=${jenkins.home}/bin
 
 configuration.directory=./target/configuration
