--- a/code/libs/pom.xml
+++ b/code/libs/pom.xml
@@ -40,7 +40,7 @@
 							<generatePom>true</generatePom>
 							<file>drivers/db2jcc4-9.7.2.jar</file>
 							<repositoryId>ikube</repositoryId>
-							<url>http://ikube.dyndns.org:9000/artifactory/libs-release-local</url>
+							<url>http://localhost:8080/artifactory/libs-release-local</url>
 						</configuration>
 					</execution>
 					<execution>
@@ -57,7 +57,7 @@
 							<file>drivers/db2jcc_license_cu-9.7.2.jar</file>
 							<generatePom>true</generatePom>
 							<repositoryId>ikube</repositoryId>
-							<url>http://ikube.dyndns.org:9000/artifactory/libs-release-local</url>
+							<url>http://localhost:8080/artifactory/libs-release-local</url>
 						</configuration>
 					</execution>
 					<execution>
@@ -74,7 +74,7 @@
 							<file>drivers/ojdbc6-11.jar</file>
 							<generatePom>true</generatePom>
 							<repositoryId>ikube</repositoryId>
-							<url>http://ikube.dyndns.org:9000/artifactory/libs-release-local</url>
+							<url>http://localhost:8080/artifactory/libs-release-local</url>
 						</configuration>
 					</execution>
 					<execution>
@@ -91,7 +91,7 @@
 							<file>tools/jep-2.4.1.jar</file>
 							<generatePom>true</generatePom>
 							<repositoryId>ikube</repositoryId>
-							<url>http://ikube.dyndns.org:9000/artifactory/libs-release-local</url>
+							<url>http://localhost:8080/artifactory/libs-release-local</url>
 						</configuration>
 					</execution>
 					<execution>
@@ -108,7 +108,7 @@
 							<file>aspose/aspose-cells-7.0.0.jar</file>
 							<generatePom>true</generatePom>
 							<repositoryId>ikube</repositoryId>
-							<url>http://ikube.dyndns.org:9000/artifactory/libs-release-local</url>
+							<url>http://localhost:8080/artifactory/libs-release-local</url>
 						</configuration>
 					</execution>
 					<execution>
@@ -125,7 +125,7 @@
 							<file>aspose/aspose-pdf-2.9.0-jdk16.jar</file>
 							<generatePom>true</generatePom>
 							<repositoryId>ikube</repositoryId>
-							<url>http://ikube.dyndns.org:9000/artifactory/libs-release-local</url>
+							<url>http://localhost:8080/artifactory/libs-release-local</url>
 						</configuration>
 					</execution>
 					<execution>
@@ -142,7 +142,7 @@
 							<file>aspose/aspose.slides-2.6.0.jar</file>
 							<generatePom>true</generatePom>
 							<repositoryId>ikube</repositoryId>
-							<url>http://ikube.dyndns.org:9000/artifactory/libs-release-local</url>
+							<url>http://localhost:8080/artifactory/libs-release-local</url>
 						</configuration>
 					</execution>
 					<execution>
@@ -159,7 +159,7 @@
 							<file>aspose/aspose.words.jdk16-7.0.0.jar</file>
 							<generatePom>true</generatePom>
 							<repositoryId>ikube</repositoryId>
-							<url>http://ikube.dyndns.org:9000/artifactory/libs-release-local</url>
+							<url>http://localhost:8080/artifactory/libs-release-local</url>
 						</configuration>
 					</execution>
 					<execution>
@@ -176,7 +176,7 @@
 							<file>tools/canyon-0.9.8.jar</file>
 							<generatePom>true</generatePom>
 							<repositoryId>ikube</repositoryId>
-							<url>http://ikube.dyndns.org:9000/artifactory/libs-release-local</url>
+							<url>http://localhost:8080/artifactory/libs-release-local</url>
 						</configuration>
 					</execution>
 					<execution>
@@ -193,7 +193,24 @@
 							<file>tools/jai_codec-1.1.3-alpha.jar</file>
 							<generatePom>true</generatePom>
 							<repositoryId>ikube</repositoryId>
-							<url>http://ikube.dyndns.org:9000/artifactory/libs-release-local</url>
+							<url>http://localhost:8080/artifactory/libs-release-local</url>
+						</configuration>
+					</execution>
+					<execution>
+						<id>install-lzma-jio</id>
+						<goals>
+							<goal>deploy-file</goal>
+						</goals>
+						<phase>deploy</phase>
+						<configuration>
+							<groupId>lzma</groupId>
+							<artifactId>jio</artifactId>
+							<version>1.1.3</version>
+							<packaging>jar</packaging>
+							<file>tools/lzma-4.63-jio-0.94.jar</file>
+							<generatePom>true</generatePom>
+							<repositoryId>ikube</repositoryId>
+							<url>http://localhost:8080/artifactory/libs-release-local</url>
 						</configuration>
 					</execution>
 				</executions>
