Changed the file handler to read in the zips and not unpack them first.
git-svn-id: http://ikube.googlecode.com/svn/trunk@840 89a0fb20-889e-aefa-90f6-7c296b20d5cf

--- a/pom.xml
+++ b/pom.xml
@@ -766,6 +766,13 @@
 			<artifactId>commons-compress</artifactId>
 			<version>1.0</version>
 		</dependency>
+		<dependency>
+			<groupId>de.schlichtherle</groupId>
+			<artifactId>truezip</artifactId>
+			<version>6.8.4</version>
+			<type>jar</type>
+			<scope>compile</scope>
+		</dependency>
 	</dependencies>
 
 	<repositories>
