Adding the logic to unpack the Wiki data.
git-svn-id: http://ikube.googlecode.com/svn/trunk@841 89a0fb20-889e-aefa-90f6-7c296b20d5cf

--- a/code/core/src/main/resources/conf/integration/spring.properties
+++ b/code/core/src/main/resources/conf/integration/spring.properties
@@ -2,7 +2,9 @@
 ## This file should be modified by clients ##
 ############################
 
-postgres.jdbc.userid=cmp
-postgres.jdbc.password=pwd
+postgres.jdbc.userid=postgres
+postgres.jdbc.password=Caherl1ne
 postgres.jdbc.driver=org.postgresql.Driver
-postgres.jdbc.url=jdbc:postgresql://localhost:5432/cmp
+postgres.jdbc.url=jdbc:postgresql://ikube.dyndns.org:5432/ikube
+
+# Login for the user 'postgres' has 'postgres' as a password
