--- a/code/core/src/main/resources/conf/common/spring.properties
+++ b/code/core/src/main/resources/conf/common/spring.properties
@@ -89,12 +89,6 @@ oracle.jdbc.password=Caherl1ne
 oracle.jdbc.url=jdbc:oracle:thin:@//ikube.dyndns.org:1521/ikube
 oracle.jdbc.driver=oracle.jdbc.driver.OracleDriver
 
-# The Postgres database credentials
-postgresql.jdbc.userid=ikube
-postgresql.jdbc.password=Caherl1ne
-postgresql.jdbc.url=jdbc:postgresql://ikube.dyndns.org:5432/ikube
-postgresql.jdbc.driver=org.postgresql.Driver
-
 #General JDBC settings
 jdbc.minPoolSize=5
 jdbc.maxPoolSize=10
@@ -109,27 +103,27 @@ jdbc.unreturnedConnectionTimeout=12000000
 
 # H2 database, this is for distribution and production. This 
 # database is what ikube will use in the field
-ikube.dataSource=nonXaDataSourceH2
-ikube.persistenceUnit=IkubePersistenceUnitH2
-ikube.dataSourceType=H2
-ikube.jdbc.userid=${h2.jdbc.userid}
-ikube.jdbc.password=
-ikube.jdbc.url=${h2.jdbc.url}
-ikube.jdbc.driver=${h2.jdbc.driver}
-ikube.jdbc.dictionary=h2(batchLimit=1000)
-ikube.dataBaseClass=ikube.database.jpa.DataBaseJpa
+#ikube.dataSource=nonXaDataSourceH2
+#ikube.persistenceUnit=IkubePersistenceUnitH2
+#ikube.dataSourceType=H2
+#ikube.jdbc.userid=${h2.jdbc.userid}
+#ikube.jdbc.password=
+#ikube.jdbc.url=${h2.jdbc.url}
+#ikube.jdbc.driver=${h2.jdbc.driver}
+#ikube.jdbc.dictionary=h2(batchLimit=1000)
+#ikube.dataBaseClass=ikube.database.jpa.DataBaseJpa
 
 # Db2 database, this database is for testing essentially as
 # there is always an instance running on the server
-#ikube.dataSource=nonXaDataSourceDb2
-#ikube.persistenceUnit=IkubePersistenceUnitDb2
-#ikube.dataSourceType=DB2
-#ikube.jdbc.userid=${db2.jdbc.userid}
-#ikube.jdbc.password=${db2.jdbc.password}
-#ikube.jdbc.url=${db2.jdbc.url}
-#ikube.jdbc.driver=${db2.jdbc.driver}
-#ikube.jdbc.dictionary=db2(batchLimit=1000)
-#ikube.dataBaseClass=ikube.database.jpa.DataBaseJpaDb2
+ikube.dataSource=nonXaDataSourceDb2
+ikube.persistenceUnit=IkubePersistenceUnitDb2
+ikube.dataSourceType=DB2
+ikube.jdbc.userid=${db2.jdbc.userid}
+ikube.jdbc.password=${db2.jdbc.password}
+ikube.jdbc.url=${db2.jdbc.url}
+ikube.jdbc.driver=${db2.jdbc.driver}
+ikube.jdbc.dictionary=db2(batchLimit=1000)
+ikube.dataBaseClass=ikube.database.jpa.DataBaseJpaDb2
 
 # Oracle database, this database is for testing essentially as
 # there is always an instance running on the server
