Added more logic to the unpacker.
git-svn-id: http://ikube.googlecode.com/svn/trunk@844 89a0fb20-889e-aefa-90f6-7c296b20d5cf

--- a/code/tool/pom.xml
+++ b/code/tool/pom.xml
@@ -50,6 +50,18 @@
 			<type>jar</type>
 			<scope>compile</scope>
 		</dependency>
+
+		<dependency>
+			<groupId>sevenzip</groupId>
+			<artifactId>jbinding</artifactId>
+			<version>4.65.1</version>
+		</dependency>
+		<dependency>
+			<groupId>sevenzip</groupId>
+			<artifactId>jbinding-linux</artifactId>
+			<version>4.65.1</version>
+		</dependency>
+
 	</dependencies>
-	
+
 </project>
