--- a/code/libs/pom.xml
+++ b/code/libs/pom.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation=" http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation=" http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>ikube</groupId>
@@ -40,7 +41,7 @@
 							<generatePom>true</generatePom>
 							<file>drivers/db2jcc4-9.7.2.jar</file>
 							<repositoryId>ikube</repositoryId>
-							<url>http://localhost:8080/artifactory/libs-release-local</url>
+							<url>http://ikube.dyndns.org:8080/artifactory/libs-release-local</url>
 						</configuration>
 					</execution>
 					<execution>
@@ -57,7 +58,7 @@
 							<file>drivers/db2jcc_license_cu-9.7.2.jar</file>
 							<generatePom>true</generatePom>
 							<repositoryId>ikube</repositoryId>
-							<url>http://localhost:8080/artifactory/libs-release-local</url>
+							<url>http://ikube.dyndns.org:8080/artifactory/libs-release-local</url>
 						</configuration>
 					</execution>
 					<execution>
@@ -74,7 +75,7 @@
 							<file>drivers/ojdbc6-11.jar</file>
 							<generatePom>true</generatePom>
 							<repositoryId>ikube</repositoryId>
-							<url>http://localhost:8080/artifactory/libs-release-local</url>
+							<url>http://ikube.dyndns.org:8080/artifactory/libs-release-local</url>
 						</configuration>
 					</execution>
 					<execution>
@@ -91,7 +92,7 @@
 							<file>tools/jep-2.4.1.jar</file>
 							<generatePom>true</generatePom>
 							<repositoryId>ikube</repositoryId>
-							<url>http://localhost:8080/artifactory/libs-release-local</url>
+							<url>http://ikube.dyndns.org:8080/artifactory/libs-release-local</url>
 						</configuration>
 					</execution>
 					<execution>
@@ -108,7 +109,7 @@
 							<file>aspose/aspose-cells-7.0.0.jar</file>
 							<generatePom>true</generatePom>
 							<repositoryId>ikube</repositoryId>
-							<url>http://localhost:8080/artifactory/libs-release-local</url>
+							<url>http://ikube.dyndns.org:8080/artifactory/libs-release-local</url>
 						</configuration>
 					</execution>
 					<execution>
@@ -125,7 +126,7 @@
 							<file>aspose/aspose-pdf-2.9.0-jdk16.jar</file>
 							<generatePom>true</generatePom>
 							<repositoryId>ikube</repositoryId>
-							<url>http://localhost:8080/artifactory/libs-release-local</url>
+							<url>http://ikube.dyndns.org:8080/artifactory/libs-release-local</url>
 						</configuration>
 					</execution>
 					<execution>
@@ -142,7 +143,7 @@
 							<file>aspose/aspose.slides-2.6.0.jar</file>
 							<generatePom>true</generatePom>
 							<repositoryId>ikube</repositoryId>
-							<url>http://localhost:8080/artifactory/libs-release-local</url>
+							<url>http://ikube.dyndns.org:8080/artifactory/libs-release-local</url>
 						</configuration>
 					</execution>
 					<execution>
@@ -159,7 +160,7 @@
 							<file>aspose/aspose.words.jdk16-7.0.0.jar</file>
 							<generatePom>true</generatePom>
 							<repositoryId>ikube</repositoryId>
-							<url>http://localhost:8080/artifactory/libs-release-local</url>
+							<url>http://ikube.dyndns.org:8080/artifactory/libs-release-local</url>
 						</configuration>
 					</execution>
 					<execution>
@@ -176,7 +177,7 @@
 							<file>tools/canyon-0.9.8.jar</file>
 							<generatePom>true</generatePom>
 							<repositoryId>ikube</repositoryId>
-							<url>http://localhost:8080/artifactory/libs-release-local</url>
+							<url>http://ikube.dyndns.org:8080/artifactory/libs-release-local</url>
 						</configuration>
 					</execution>
 					<execution>
@@ -193,7 +194,7 @@
 							<file>tools/jai_codec-1.1.3-alpha.jar</file>
 							<generatePom>true</generatePom>
 							<repositoryId>ikube</repositoryId>
-							<url>http://localhost:8080/artifactory/libs-release-local</url>
+							<url>http://ikube.dyndns.org:8080/artifactory/libs-release-local</url>
 						</configuration>
 					</execution>
 					<execution>
@@ -210,12 +211,63 @@
 							<file>tools/lzma-4.63-jio-0.94.jar</file>
 							<generatePom>true</generatePom>
 							<repositoryId>ikube</repositoryId>
-							<url>http://localhost:8080/artifactory/libs-release-local</url>
+							<url>http://ikube.dyndns.org:8080/artifactory/libs-release-local</url>
+						</configuration>
+					</execution>
+					<execution>
+						<id>install-7zip-binding-linux</id>
+						<goals>
+							<goal>deploy-file</goal>
+						</goals>
+						<phase>deploy</phase>
+						<configuration>
+							<groupId>sevenzip</groupId>
+							<artifactId>jbinding</artifactId>
+							<version>4.65.1</version>
+							<packaging>jar</packaging>
+							<file>tools/linux/sevenzipjbinding-4.65.1.jar</file>
+							<generatePom>true</generatePom>
+							<repositoryId>ikube</repositoryId>
+							<url>http://ikube.dyndns.org:8080/artifactory/libs-release-local</url>
+						</configuration>
+					</execution>
+					<execution>
+						<id>install-7zip-binding-linux-linking</id>
+						<goals>
+							<goal>deploy-file</goal>
+						</goals>
+						<phase>deploy</phase>
+						<configuration>
+							<groupId>sevenzip</groupId>
+							<artifactId>jbinding-linux</artifactId>
+							<version>4.65.1</version>
+							<packaging>jar</packaging>
+							<file>tools/linux/sevenzipjbinding-AllLinux-4.65.1.jar</file>
+							<generatePom>true</generatePom>
+							<repositoryId>ikube</repositoryId>
+							<url>http://ikube.dyndns.org:8080/artifactory/libs-release-local</url>
+						</configuration>
+					</execution>
+					<execution>
+						<id>install-7zip-binding-windows-linking</id>
+						<goals>
+							<goal>deploy-file</goal>
+						</goals>
+						<phase>deploy</phase>
+						<configuration>
+							<groupId>sevenzip</groupId>
+							<artifactId>jbinding-windows</artifactId>
+							<version>4.65.1</version>
+							<packaging>jar</packaging>
+							<file>tools/windoze/sevenzipjbinding-AllWindows-4.65.1.jar</file>
+							<generatePom>true</generatePom>
+							<repositoryId>ikube</repositoryId>
+							<url>http://ikube.dyndns.org:8080/artifactory/libs-release-local</url>
 						</configuration>
 					</execution>
 				</executions>
 			</plugin>
 		</plugins>
 	</build>
-	
+
 </project>
