--- a/code/core/src/main/resources/conf/common/spring.properties
+++ b/code/core/src/main/resources/conf/common/spring.properties
@@ -42,7 +42,7 @@ faq.predicate=where faq.faqid < 10000000 and published = 1
 patient.predicate=where patient.id > 0
 files.path=./code/core/src/test/resources/data/files
 files.path.million=/usr/local/cluster/apache-tomcat-6.0.26-1
-files.excluded.pattern=.*(.svn).*|.*(.db).*|.*(.gif).*|.*(.svg).*|.*(.jpg).*|.*(.exe).*|.*(.dll).*|.*(password).*|.*(enwiki-latest-pages-articles).*
+files.excluded.pattern=.*(.svn).*|.*(.db).*|.*(.gif).*|.*(.svg).*|.*(.jpg).*|.*(.exe).*|.*(.dll).*|.*(password).*|.*(enwiki-latest-pages-articles).*|.*(RSA).*
 internet.excluded.pattern=.*(.zip).*|.*(.png).*|.*(/search).*|.*(/images).*|.*(wiki).*|.*(r=).*|.*(.war).*|.*(terminate).*|.*(startup).*
 
 ################################################
@@ -103,27 +103,27 @@ jdbc.unreturnedConnectionTimeout=12000000
 
 # H2 database, this is for distribution and production. This 
 # database is what ikube will use in the field
-#ikube.dataSource=nonXaDataSourceH2
-#ikube.persistenceUnit=IkubePersistenceUnitH2
-#ikube.dataSourceType=H2
-#ikube.jdbc.userid=${h2.jdbc.userid}
-#ikube.jdbc.password=
-#ikube.jdbc.url=${h2.jdbc.url}
-#ikube.jdbc.driver=${h2.jdbc.driver}
-#ikube.jdbc.dictionary=h2(batchLimit=1000)
-#ikube.dataBaseClass=ikube.database.jpa.DataBaseJpa
+ikube.dataSource=nonXaDataSourceH2
+ikube.persistenceUnit=IkubePersistenceUnitH2
+ikube.dataSourceType=H2
+ikube.jdbc.userid=${h2.jdbc.userid}
+ikube.jdbc.password=
+ikube.jdbc.url=${h2.jdbc.url}
+ikube.jdbc.driver=${h2.jdbc.driver}
+ikube.jdbc.dictionary=h2(batchLimit=1000)
+ikube.dataBaseClass=ikube.database.jpa.DataBaseJpa
 
 # Db2 database, this database is for testing essentially as
 # there is always an instance running on the server
-ikube.dataSource=nonXaDataSourceDb2
-ikube.persistenceUnit=IkubePersistenceUnitDb2
-ikube.dataSourceType=DB2
-ikube.jdbc.userid=${db2.jdbc.userid}
-ikube.jdbc.password=${db2.jdbc.password}
-ikube.jdbc.url=${db2.jdbc.url}
-ikube.jdbc.driver=${db2.jdbc.driver}
-ikube.jdbc.dictionary=db2(batchLimit=1000)
-ikube.dataBaseClass=ikube.database.jpa.DataBaseJpaDb2
+#ikube.dataSource=nonXaDataSourceDb2
+#ikube.persistenceUnit=IkubePersistenceUnitDb2
+#ikube.dataSourceType=DB2
+#ikube.jdbc.userid=${db2.jdbc.userid}
+#ikube.jdbc.password=${db2.jdbc.password}
+#ikube.jdbc.url=${db2.jdbc.url}
+#ikube.jdbc.driver=${db2.jdbc.driver}
+#ikube.jdbc.dictionary=db2(batchLimit=1000)
+#ikube.dataBaseClass=ikube.database.jpa.DataBaseJpaDb2
 
 # Oracle database, this database is for testing essentially as
 # there is always an instance running on the server
