Added the jQuery JavaScript to the pages and started the call to the server for the autocomplete.
git-svn-id: http://ikube.googlecode.com/svn/trunk@847 89a0fb20-889e-aefa-90f6-7c296b20d5cf

--- a/code/war/build.xml
+++ b/code/war/build.xml
@@ -88,7 +88,7 @@
 		<copy file="${target.directory}/${ikube.war}" todir="${glassfish.1.deploy}" overwrite="true" failonerror="false" />
 		<copy file="${target.directory}/${ikube.war}" todir="${oc4j.1.deploy}" overwrite="true" failonerror="false" />
 		<copy file="${target.directory}/${ikube.war}" todir="${weblogic.1.deploy}" overwrite="true" failonerror="false" />
-		<copy file="${target.directory}/${ikube.war}" todir="C:/jboss-4.2.2.GA/server/default/deploy" overwrite="true" failonerror="false" />
+		<!-- copy file="${target.directory}/${ikube.war}" todir="C:/jboss-4.2.2.GA/server/default/deploy" overwrite="true" failonerror="false" / -->
 	</target>
 
 	<target name="clean.server">
@@ -131,30 +131,30 @@
 		<unjar src="${configuration.directory}/${ikube.configuration.jar}" dest="${glassfish.1.bin}" overwrite="true" />
 		<unjar src="${configuration.directory}/${ikube.configuration.jar}" dest="${oc4j.1.bin}" overwrite="true" />
 		<unjar src="${configuration.directory}/${ikube.configuration.jar}" dest="${weblogic.1.bin}" overwrite="true" />
-		<unjar src="${configuration.directory}/${ikube.configuration.jar}" dest="C:/jboss-4.2.2.GA/bin" overwrite="true" />
-		<replace dir="${tomcat.2.bin}" value="61616">
+		<!-- unjar src="${configuration.directory}/${ikube.configuration.jar}" dest="C:/jboss-4.2.2.GA/bin" overwrite="true" / -->
+		<replace dir="${tomcat.2.bin}" value="61618">
 			<include name="**/spring.properties" />
-			<replacetoken><![CDATA[61616]]></replacetoken>
+			<replacetoken><![CDATA[61617]]></replacetoken>
 		</replace>
-		<replace dir="${tomcat.3.bin}" value="61618">
+		<replace dir="${tomcat.3.bin}" value="61619">
 			<include name="**/spring.properties" />
-			<replacetoken><![CDATA[61616]]></replacetoken>
+			<replacetoken><![CDATA[61617]]></replacetoken>
 		</replace>
-		<replace dir="${jboss.1.bin}" value="61619">
+		<replace dir="${jboss.1.bin}" value="61620">
 			<include name="**/spring.properties" />
-			<replacetoken><![CDATA[61616]]></replacetoken>
+			<replacetoken><![CDATA[61617]]></replacetoken>
 		</replace>
-		<replace dir="${glassfish.1.bin}" value="61620">
+		<replace dir="${glassfish.1.bin}" value="61621">
 			<include name="**/spring.properties" />
-			<replacetoken><![CDATA[61616]]></replacetoken>
+			<replacetoken><![CDATA[61617]]></replacetoken>
 		</replace>
-		<replace dir="${oc4j.1.bin}" value="61621">
+		<replace dir="${oc4j.1.bin}" value="61622">
 			<include name="**/spring.properties" />
-			<replacetoken><![CDATA[61616]]></replacetoken>
+			<replacetoken><![CDATA[61617]]></replacetoken>
 		</replace>
-		<replace dir="${weblogic.1.bin}" value="61622">
+		<replace dir="${weblogic.1.bin}" value="61623">
 			<include name="**/spring.properties" />
-			<replacetoken><![CDATA[61616]]></replacetoken>
+			<replacetoken><![CDATA[61617]]></replacetoken>
 		</replace>
 	</target>
 
