Finished the documentation, ready for a release 3.0.0.
git-svn-id: http://ikube.googlecode.com/svn/trunk@849 89a0fb20-889e-aefa-90f6-7c296b20d5cf

--- a/code/war/build.xml
+++ b/code/war/build.xml
@@ -61,6 +61,13 @@
 			<arg line="start" />
 		</java>
 	</target>
+	
+	<target name="zip">
+		<zip destfile="${target.directory}/ikube.zip" compress="true" filesonly="false" update="false" whenempty="skip">
+			<fileset dir="${configuration.directory}" />
+			<fileset dir="${target.directory}" includes="${ikube.war}" />
+		</zip>
+	</target>
 
 	<target name="deploy">
 		<!-- Delete the index directories in the cluster. -->
