Changed the Oracle uid.
git-svn-id: http://ikube.googlecode.com/svn/trunk@856 89a0fb20-889e-aefa-90f6-7c296b20d5cf

--- a/code/core/src/main/resources/conf/common/spring.properties
+++ b/code/core/src/main/resources/conf/common/spring.properties
@@ -86,7 +86,7 @@ db2.jdbc.driver=com.ibm.db2.jcc.DB2Driver
 # The Oracle database credentials
 oracle.jdbc.userid=ikube
 oracle.jdbc.password=Caherl1ne
-oracle.jdbc.url=jdbc:oracle:thin:@//ikube.dyndns.org:1521/ikube
+oracle.jdbc.url=jdbc:oracle:thin:@//ikube.dyndns.org:1521/XE
 oracle.jdbc.driver=oracle.jdbc.driver.OracleDriver
 
 #General JDBC settings
