--- a/pom.xml
+++ b/pom.xml
@@ -140,6 +140,11 @@
 				<artifactId>truezip-maven-plugin</artifactId>
 				<version>1.0-beta-5</version>
 			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-site-plugin</artifactId>
+				<version>3.0</version>
+			</plugin>
 		</plugins>
 	</build>
 
