Updated the spelling functionality.
git-svn-id: http://ikube.googlecode.com/svn/trunk@879 89a0fb20-889e-aefa-90f6-7c296b20d5cf

--- a/code/war/build.xml
+++ b/code/war/build.xml
@@ -71,12 +71,12 @@
 
 	<target name="deploy">
 		<!-- Delete the index directories in the cluster. -->
-		<antcall target="clean.server">
+		<!-- antcall target="clean.server">
 			<param name="directory" value="${tomcat.bin}" />
-		</antcall>
-		<antcall target="clean.server">
+		</antcall -->
+		<!-- antcall target="clean.server">
 			<param name="directory" value="${tomcat.webapps}" />
-		</antcall>
+		</antcall -->
 		<antcall target="clean.server">
 			<param name="directory" value="${tomcat.1.bin}" />
 		</antcall>
@@ -130,7 +130,7 @@
 	<target name="deploy.configuration">
 		<jar destfile="${configuration.directory}/${ikube.configuration.jar}" basedir="${configuration.directory}" />
 		<copy file="${configuration.directory}/${ikube.configuration.jar}" todir="./src/main/webapp/docs" failonerror="true" />
-		<unjar src="${configuration.directory}/${ikube.configuration.jar}" dest="${tomcat.bin}" overwrite="true" />
+		<!-- unjar src="${configuration.directory}/${ikube.configuration.jar}" dest="${tomcat.bin}" overwrite="true" / -->
 		<unjar src="${configuration.directory}/${ikube.configuration.jar}" dest="${tomcat.1.bin}" overwrite="true" />
 		<unjar src="${configuration.directory}/${ikube.configuration.jar}" dest="${tomcat.2.bin}" overwrite="true" />
 		<unjar src="${configuration.directory}/${ikube.configuration.jar}" dest="${tomcat.3.bin}" overwrite="true" />
