--- a/code/war/build.xml
+++ b/code/war/build.xml
@@ -71,12 +71,12 @@
 
 	<target name="deploy">
 		<!-- Delete the index directories in the cluster. -->
-		<!-- antcall target="clean.server">
+		<antcall target="clean.server">
 			<param name="directory" value="${tomcat.bin}" />
-		</antcall -->
-		<!-- antcall target="clean.server">
+		</antcall>
+		<antcall target="clean.server">
 			<param name="directory" value="${tomcat.webapps}" />
-		</antcall -->
+		</antcall>
 		<antcall target="clean.server">
 			<param name="directory" value="${tomcat.1.bin}" />
 		</antcall>
@@ -87,7 +87,7 @@
 			<param name="directory" value="${tomcat.3}" />
 		</antcall>
 		<!-- Deploy the ikube war into the cluster. -->
-		<!-- copy file="${target.directory}/${ikube.war}" todir="${tomcat.webapps}" overwrite="true" failonerror="false" / -->
+		<copy file="${target.directory}/${ikube.war}" todir="${tomcat.webapps}" overwrite="true" failonerror="false" />
 		<copy file="${target.directory}/${ikube.war}" todir="${tomcat.1.webapps}" overwrite="true" failonerror="false" />
 		<copy file="${target.directory}/${ikube.war}" todir="${tomcat.2.webapps}" overwrite="true" failonerror="false" />
 		<copy file="${target.directory}/${ikube.war}" todir="${tomcat.3.webapps}" overwrite="true" failonerror="false" />
@@ -130,7 +130,7 @@
 	<target name="deploy.configuration">
 		<jar destfile="${configuration.directory}/${ikube.configuration.jar}" basedir="${configuration.directory}" />
 		<copy file="${configuration.directory}/${ikube.configuration.jar}" todir="./src/main/webapp/docs" failonerror="true" />
-		<!-- unjar src="${configuration.directory}/${ikube.configuration.jar}" dest="${tomcat.bin}" overwrite="true" / -->
+		<unjar src="${configuration.directory}/${ikube.configuration.jar}" dest="${tomcat.bin}" overwrite="true" />
 		<unjar src="${configuration.directory}/${ikube.configuration.jar}" dest="${tomcat.1.bin}" overwrite="true" />
 		<unjar src="${configuration.directory}/${ikube.configuration.jar}" dest="${tomcat.2.bin}" overwrite="true" />
 		<unjar src="${configuration.directory}/${ikube.configuration.jar}" dest="${tomcat.3.bin}" overwrite="true" />
@@ -139,6 +139,10 @@
 		<unjar src="${configuration.directory}/${ikube.configuration.jar}" dest="${oc4j.1.bin}" overwrite="true" />
 		<unjar src="${configuration.directory}/${ikube.configuration.jar}" dest="${weblogic.1.bin}" overwrite="true" />
 		<!-- unjar src="${configuration.directory}/${ikube.configuration.jar}" dest="C:/jboss-4.2.2.GA/bin" overwrite="true" / -->
+		<replace dir="${tomcat.bin}" value="61615">
+			<include name="**/spring.properties" />
+			<replacetoken><![CDATA[61617]]></replacetoken>
+		</replace>
 		<replace dir="${tomcat.2.bin}" value="61618">
 			<include name="**/spring.properties" />
 			<replacetoken><![CDATA[61617]]></replacetoken>
