Modifying the Spring location of the configuration files.
git-svn-id: http://ikube.googlecode.com/svn/trunk@884 89a0fb20-889e-aefa-90f6-7c296b20d5cf

--- a/code/core/src/main/resources/META-INF/log4j.properties
+++ b/code/core/src/main/resources/META-INF/log4j.properties
@@ -5,7 +5,7 @@ log4j.rootCategory=INFO, console
 # ikube application file logging
 log4j.appender.file=org.apache.log4j.DailyRollingFileAppender
 log4j.appender.file.Threshold=DEBUG
-log4j.appender.file.File=/usr/local/post/app-rep/sum-st/sum-v000618-batch-UC4-st1-node1/ikube/ikube.log
+log4j.appender.file.File=ikube/ikube.log
 log4j.appender.file.layout=org.apache.log4j.PatternLayout
 log4j.appender.file.layout.ConversionPattern=%d{HH:mm:ss,SSS} %-5p %C{1}.%M(%L) - %m%n
 log4j.appender.file.Append=false
