--- a/code/core/src/main/resources/conf/common/spring.properties
+++ b/code/core/src/main/resources/conf/common/spring.properties
@@ -13,7 +13,7 @@ buffered.docs=100
 max.field.length=1000
 max.read.length=1000000
 # \\\\Ikube\\D\\cluster\\apache-tomcat-6.0.29-1\\bin\\indexes
-index.directory.path=/usr/local/post/app-rep/sum-st/sum-v000618-batch-UC4-st1-node1/ikube/indexes
+index.directory.path=ikube/indexes
 # \\\\Ikube\\D\\cluster\\indexes\\backup
 index.directory.path.backup=${index.directory.path}/backup
 jdbc.batch.size=10000
@@ -54,7 +54,7 @@ delay=120000
 # The period between notifications for timed tasks
 period=60000
 # The maximum age of the GeoSpatial index
-max.age.geospatial=720
+max.age.geospatial=7200
 
 # These parameters are for the Ikube documentation index
 ikube.url=http://localhost/ikube/index.html
@@ -67,7 +67,7 @@ ikube.google.code=http://code.google.com/p/ikube/
 # The H2 database credentials
 h2.jdbc.userid=sa
 h2.jdbc.password=
-h2.jdbc.url=jdbc:h2:file:/usr/local/post/app-rep/sum-st/sum-v000618-batch-UC4-st1-node1/ikube/ikube
+h2.jdbc.url=jdbc:h2:file:ikube/ikube
 h2.jdbc.driver=org.h2.Driver
 #AUTO_SERVER_PORT=9090;
 #AUTO_SERVER=TRUE;
@@ -150,8 +150,8 @@ ikube.dataBaseClass=ikube.database.jpa.DataBaseJpa
 activemq.port=61617
 activemq.destination=composite.destination
 
-language.word.lists.directory=/usr/local/post/app-rep/sum-st/sum-v000618-batch-UC4-st1-node1/ikube/languages
-language.word.lists.directory.index=/usr/local/post/app-rep/sum-st/sum-v000618-batch-UC4-st1-node1/ikube/languages/index
+language.word.lists.directory=ikube/languages
+language.word.lists.directory.index=ikube/languages/index
 
 searcher.web.service.port=8081
 searcher.web.service.port.xml=8082
