--- a/code/war/build.xml
+++ b/code/war/build.xml
@@ -68,15 +68,15 @@
 			<fileset dir="${target.directory}" includes="${ikube.war}" />
 		</zip>
 	</target>
-
-	<target name="deploy">
+	
+	<target name="clean.servers">
 		<!-- Delete the index directories in the cluster. -->
-		<antcall target="clean.server">
+		<!-- antcall target="clean.server">
 			<param name="directory" value="${tomcat.bin}" />
 		</antcall>
 		<antcall target="clean.server">
 			<param name="directory" value="${tomcat.webapps}" />
-		</antcall>
+		</antcall -->
 		<antcall target="clean.server">
 			<param name="directory" value="${tomcat.1.bin}" />
 		</antcall>
@@ -86,8 +86,11 @@
 		<antcall target="clean.server">
 			<param name="directory" value="${tomcat.3}" />
 		</antcall>
+	</target>
+
+	<target name="deploy">
 		<!-- Deploy the ikube war into the cluster. -->
-		<copy file="${target.directory}/${ikube.war}" todir="${tomcat.webapps}" overwrite="true" failonerror="false" />
+		<!-- copy file="${target.directory}/${ikube.war}" todir="${tomcat.webapps}" overwrite="true" failonerror="false" / -->
 		<copy file="${target.directory}/${ikube.war}" todir="${tomcat.1.webapps}" overwrite="true" failonerror="false" />
 		<copy file="${target.directory}/${ikube.war}" todir="${tomcat.2.webapps}" overwrite="true" failonerror="false" />
 		<copy file="${target.directory}/${ikube.war}" todir="${tomcat.3.webapps}" overwrite="true" failonerror="false" />
@@ -95,7 +98,7 @@
 		<copy file="${target.directory}/${ikube.war}" todir="${glassfish.1.deploy}" overwrite="true" failonerror="false" />
 		<copy file="${target.directory}/${ikube.war}" todir="${oc4j.1.deploy}" overwrite="true" failonerror="false" />
 		<copy file="${target.directory}/${ikube.war}" todir="${weblogic.1.deploy}" overwrite="true" failonerror="false" />
-		<copy file="${target.directory}/${ikube.war}" todir="C:/jboss-4.2.2.GA/server/default/deploy" overwrite="true" failonerror="false" />
+		<!-- copy file="${target.directory}/${ikube.war}" todir="C:/jboss-4.2.2.GA/server/default/deploy" overwrite="true" failonerror="false" / -->
 	</target>
 
 	<target name="clean.server">
@@ -127,10 +130,17 @@
 			<fileset dir="../core/src/main/resources/conf/production" />
 		</copy>
 	</target>
-	<target name="deploy.configuration">
+	<target name="jar.configuration">
 		<jar destfile="${configuration.directory}/${ikube.configuration.jar}" basedir="${configuration.directory}" />
+	</target>
+	<target name="deploy.configuration.for.jetty">
+		<unjar src="${configuration.directory}/${ikube.configuration.jar}" dest="${user.dir}" overwrite="true" />
+	</target>
+	<target name="deploy.configuration">
+		<echo>User dir: ${user.dir}</echo>
+		<echo>User home: ${user.home}</echo>
 		<copy file="${configuration.directory}/${ikube.configuration.jar}" todir="./src/main/webapp/docs" failonerror="true" />
-		<unjar src="${configuration.directory}/${ikube.configuration.jar}" dest="${tomcat.bin}" overwrite="true" />
+		<!-- unjar src="${configuration.directory}/${ikube.configuration.jar}" dest="${tomcat.bin}" overwrite="true" / -->
 		<unjar src="${configuration.directory}/${ikube.configuration.jar}" dest="${tomcat.1.bin}" overwrite="true" />
 		<unjar src="${configuration.directory}/${ikube.configuration.jar}" dest="${tomcat.2.bin}" overwrite="true" />
 		<unjar src="${configuration.directory}/${ikube.configuration.jar}" dest="${tomcat.3.bin}" overwrite="true" />
@@ -138,7 +148,7 @@
 		<unjar src="${configuration.directory}/${ikube.configuration.jar}" dest="${glassfish.1.bin}" overwrite="true" />
 		<unjar src="${configuration.directory}/${ikube.configuration.jar}" dest="${oc4j.1.bin}" overwrite="true" />
 		<unjar src="${configuration.directory}/${ikube.configuration.jar}" dest="${weblogic.1.bin}" overwrite="true" />
-		<unjar src="${configuration.directory}/${ikube.configuration.jar}" dest="C:/jboss-4.2.2.GA/bin" overwrite="true" />
+		<!-- unjar src="${configuration.directory}/${ikube.configuration.jar}" dest="C:/jboss-4.2.2.GA/bin" overwrite="true" / -->
 		<replace dir="${tomcat.bin}" value="61615">
 			<include name="**/spring.properties" />
 			<replacetoken><![CDATA[61617]]></replacetoken>
