Added the wiki indexer and some other investigations.
git-svn-id: http://ikube.googlecode.com/svn/trunk@888 89a0fb20-889e-aefa-90f6-7c296b20d5cf

--- a/code/war/build.xml
+++ b/code/war/build.xml
@@ -98,7 +98,7 @@
 		<copy file="${target.directory}/${ikube.war}" todir="${glassfish.1.deploy}" overwrite="true" failonerror="false" />
 		<copy file="${target.directory}/${ikube.war}" todir="${oc4j.1.deploy}" overwrite="true" failonerror="false" />
 		<copy file="${target.directory}/${ikube.war}" todir="${weblogic.1.deploy}" overwrite="true" failonerror="false" />
-		<!-- copy file="${target.directory}/${ikube.war}" todir="C:/jboss-4.2.2.GA/server/default/deploy" overwrite="true" failonerror="false" / -->
+		<copy file="${target.directory}/${ikube.war}" todir="C:/jboss-4.2.2.GA/server/default/deploy" overwrite="true" failonerror="false" />
 	</target>
 
 	<target name="clean.server">
@@ -148,7 +148,7 @@
 		<unjar src="${configuration.directory}/${ikube.configuration.jar}" dest="${glassfish.1.bin}" overwrite="true" />
 		<unjar src="${configuration.directory}/${ikube.configuration.jar}" dest="${oc4j.1.bin}" overwrite="true" />
 		<unjar src="${configuration.directory}/${ikube.configuration.jar}" dest="${weblogic.1.bin}" overwrite="true" />
-		<!-- unjar src="${configuration.directory}/${ikube.configuration.jar}" dest="C:/jboss-4.2.2.GA/bin" overwrite="true" / -->
+		<unjar src="${configuration.directory}/${ikube.configuration.jar}" dest="C:/jboss-4.2.2.GA/bin" overwrite="true" />
 		<replace dir="${tomcat.bin}" value="61615">
 			<include name="**/spring.properties" />
 			<replacetoken><![CDATA[61617]]></replacetoken>
