--- a/code/tool/pom.xml
+++ b/code/tool/pom.xml
@@ -61,6 +61,13 @@
 			<version>4.65.1</version>
 		</dependency>
 
+		<dependency>
+			<groupId>org.codehaus.jackson</groupId>
+			<artifactId>jackson-mapper-asl</artifactId>
+			<version>1.9.5</version>
+			<type>jar</type>
+			<scope>compile</scope>
+		</dependency>
 	</dependencies>
 
 </project>
