--- a/code/war/build.xml
+++ b/code/war/build.xml
@@ -140,7 +140,7 @@
 		<echo>User dir: ${user.dir}</echo>
 		<echo>User home: ${user.home}</echo>
 		<copy file="${configuration.directory}/${ikube.configuration.jar}" todir="./src/main/webapp/docs" failonerror="true" />
-		<!-- unjar src="${configuration.directory}/${ikube.configuration.jar}" dest="${tomcat.bin}" overwrite="true" / -->
+		<unjar src="${configuration.directory}/${ikube.configuration.jar}" dest="${tomcat.bin}" overwrite="true" />
 		<unjar src="${configuration.directory}/${ikube.configuration.jar}" dest="${tomcat.1.bin}" overwrite="true" />
 		<unjar src="${configuration.directory}/${ikube.configuration.jar}" dest="${tomcat.2.bin}" overwrite="true" />
 		<unjar src="${configuration.directory}/${ikube.configuration.jar}" dest="${tomcat.3.bin}" overwrite="true" />
